[package]
name = "rust_array_manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_array_manager"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
numpy = "0.27"
ndarray = "0.17.1"
chrono = "0.4.42"
rayon = "1.11.0"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1